<resources>
    <string name="app_name">Dispositivos_moviles_clases</string>
    <string name="title_app">Login</string>
    <string name="subtitle_app">!Bienvenido Gamer!</string>
    <string name="init_count_mesage">Inicia sesión para continuar tu aventura</string>
    <string name="user_name">Nombre de usuario</string>
    <string name="password_user">Ingrese su contraseña</string>
    <string name="mail_user">Ingrese su correo</string>
    <string name="register_true">Iniciar Sesión</string>
    <string name="no_account">¿No tienes cuenta? Regístrate</string>
    <string name="google">Google</string>
    <string name="xbox">Xbox</string>
</resources>